[package]
name = "dashboard-can-current-sensor"
version = "0.1.0"
authors = ["onefckcps <simon@leyk.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-sync = {version = "0.5.0"}
embassy-executor    = { version = "0.5.0", features = ["task-arena-size-8192", "integrated-timers"] }
esp-backtrace = { version = "0.11.0", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }

embedded-can = "0.4.1"
static_cell = { version = "2.0.0", features = ["nightly"] }

esp-hal = {version = "0.17.0", features = ["async", "esp32s3", "embassy", "embassy-executor-thread", "embassy-time-timg0"]}
esp-println = { version = "0.9.0", features = ["esp32s3", "log"] }
log = { version = "0.4.20" }
embassy-time = "0.3.0"
[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
